--- a/catalog.html
+++ b/catalog.html
@@ -8,39 +8,49 @@
 
   <body>
 
+    <!--Шапка-->
     <header class="page-header">
+      <div class="header-container">
        <img class="logo" src="images/logo.svg" alt="Логотип сайта" width="145" height="36">
-     <nav class="navigation">
-       <ul class="user-navigation-list">
-          <li class="user-navigation-item">
-            <a class="user-navigation-link" href="#">Войти</a>
-          </li>
-          <li class="user-navigation-item">
-            <a class="user-navigation-link" href="#">Сравнить</a>
-          </li>
-          <li class="user-navigation-item">
-            <a class="user-navigation-link" href="#">Корзина</a>
-          </li>
-       </ul>
+        <div class="navigation-container">
+         <nav class="navigation">
+          <ul class="user-navigation-list">
+           <li class="user-navigation-search">
+             <a class="user-navigation-link" href="#">Поиск по сайту</a>
+           </li>
+           <li class="user-navigation-item">
+             <a class="user-navigation-link" href="#">Войти</a>
+           </li>
+           <li class="user-navigation-item">
+             <a class="user-navigation-link" href="#">Сравнить</a>
+           </li class="user-navigation-item">
+           <li>
+             <a class="user-navigation-link" href="#">Корзина</a>
+           </li>
+          </ul>
 
-       <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Каталог Товаров</a>
-        </li class="navigation-item">
-        <li class="navigation-item">
-          <a class="navigation-link" href="delivery.html">Доставка</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="garanty.html">Гарантия</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="contacts.html">Контакты</a>
-        </li>
-      </ul>
-     </nav>
-    </header>
+          <ul class="navigation-list">
+           <li class="navigation-item">
+             <a class="navigation-link" href="catalog.html">Каталог Товаров</a>
+           </li class="navigation-item">
+           <li class="navigation-item">
+             <a class="navigation-link" href="delivery.html">Доставка</a>
+           </li>
+           <li class="navigation-item">
+             <a class="navigation-link" href="garanty.html">Гарантия</a>
+           </li>
+           <li class="navigation-item">
+             <a class="navigation-link" href="contacts.html">Контакты</a>
+           </li>
+          </ul>
+         </nav>
+        </div>
+      </div>
+   </header>
+
 
     <main class="main-inner">
+      <div class="container">
         <section class="inner-header">
             <h1 class="inner-header-title">Моноподы для селфи</h1>
             <ul class="breadcrumbs">
@@ -207,44 +217,52 @@
                 </li>
             </ul>
         </section>
+        </div>
     </main>
 
-    <footer class="page-footer">
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-         <img class="footer-contacts-logo" src="images/logo-footer.svg" alt="Логотип сайта" width="145" height="36">
-          <address class="footer-contacts-adress">
-           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-           <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </address>
-          <ul class="footer-list">
-            <li class="footer-item">
-             <a class="footer-link" href="delivery.html">Доставка</a>
-            </li>
-            <li class="footer-item">
-             <a class="footer-link" href="garanty.html">Гарантия</a>
-            </li> 
-            <li class="footer-item">
-             <a class="footer-link" href="contakts.html">Контакты</a>
+   <!-- Подвал -->
+   <footer class="page-footer">
+    <div class="container">
+     <section class="footer-contacts">
+       <div class="footer-container">
+       <h2 class="visually-hidden">Контакты</h2>
+        <img class="footer-contacts-logo" src="images/logo-footer.svg" alt="Логотип сайта" width="145" height="36">
+         <address class="footer-contacts-adress">
+          <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a class="footer-contacts-phone" href="tel:+78128121212">Тел.:+7 (812) 812-12-12</a>
+         </address>
+         <ul class="footer-list">
+           <li class="footer-item">
+            <a class="footer-link" href="delivery.html">Доставка</a>
+           </li>
+           <li class="footer-item">
+            <a class="footer-link" href="garanty.html">Гарантия</a>
+           </li> 
+           <li class="footer-item">
+            <a class="footer-link" href="contakts.html">Контакты</a>
+          </li>
+         </ul>
+         <ul class="footer-social">
+           <li class="footer-social-list">
+            <a class="footer-social-button" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+           </li>
+           <li class="footer-social-list">
+            <a class="footer-social-button" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+           </li>
+           <li class="footer-social-list">
+            <a class="footer-social-button" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
            </li>
           </ul>
-          <ul class="footer-social">
-            <li class="footer-social-list">
-             <a class="footer-social-button" href="#">
-               <span class="visually-hidden">Фейсбук</span>
-             </a>
-            </li>
-            <li class="footer-social-list">
-             <a class="footer-social-button" href="#">
-               <span class="visually-hidden">Инстаграм</span>
-             </a>
-            </li>
-            <li class="footer-social-list">
-             <a class="footer-social-button" href="#">
-               <span class="visually-hidden">Твиттер</span>
-             </a>
-            </li>
-           </ul>
-             <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
-      </section>
-    </footer>
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+       </div>
+     </section>
+    </div>
+   </footer>
+  </body>
+</html>
