--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,9 @@
     <!--Шапка-->
     <header class="page-header">
       <div class="header-container">
+       <a class="navigation-logo" href="index.html">
        <img class="logo" src="images/logo.svg" alt="Логотип сайта" width="145" height="36">
+       </a>
         <div class="navigation-container">
          <nav class="navigation">
           <ul class="user-navigation-list">
