--- a/index.html
+++ b/index.html
@@ -18,18 +18,17 @@
            <div class="navigation-container">
              <nav class="navigation">
                <ul class="user-navigation-list">
-               <li class="user-navigation-item-search">
+                <li class="user-navigation-item-search">
                  <a class="user-navigation-link" href="#">Поиск по сайту</a>
-               </li>
-               <li class="user-navigation-item-login">
+                </li>
+                <li class="user-navigation-item-login">
                  <a class="user-navigation-link" href="#">Войти</a>
-               </li>
-               <li class="user-navigation-item-compare">
+                </li>
+                <li class="user-navigation-item-compare">
                  <a class="user-navigation-link" href="#">Сравнить</a>
-               </li>
-               <li class="user-navigation-item-basket">
+                </li>
+                <li class="user-navigation-item-basket">
                  <a class="user-navigation-link" href="#">Корзина</a>
-               </li>
                </ul>
 
                <ul class="navigation-list">
@@ -115,53 +114,63 @@
           </table>
          </div>
        </div>
-     </section>
-    </div>
+      </section>
 
-     <!-- Катерогия товаров -->
-     <section class="categories">
-      <div class="container">
+      <!-- Катерогия товаров -->
+      <section class="categories">
        <h2 class="visually-hidden">Категории товаров</h2>
         <ul class="categories-list">
-         <li class="categories-item">
-           <div class="image-container">
-            <img class="categories-images" src="images/categories/virtual.svg" alt="Изображение для категории Вируальная реальность" width="97" height="55">
-          </div>
-            <a class="categories-link" href="catalog.html/categories/virtual-reality">Виртуальная реальность</a>
+          <li class="categories-item">
+            <a class="categories-link" href="catalog.html/categories/virtual-reality">
+             <div class="image-container">
+              <img class="categories-images" src="images/categories/virtual.svg" alt="Изображение для категории Вируальная реальность" width="97" height="55">
+             </div>
+             <p>Виртуальная реальность</p>
+           </a>
          </li>
          <li class="categories-item">
-          <div class="image-container selfie">
-           <img class="categories-images" src="images/categories/monopods.svg" alt="Изображение для категории Моноподы для селфи" width="86" height="117">
-          </div>
-           <a class="categories-link" href="catalog.html/categories/monopods">Моноподы для селфи</a>
+           <a class="categories-link" href="catalog.html/categories/monopods">
+            <div class="image-container selfie">
+             <img class="categories-images" src="images/categories/monopods.svg" alt="Изображение для категории Моноподы для селфи" width="86" height="117">
+            </div>
+            <p>Моноподы для селфи</p>
+           </a>
          </li>
          <li class="categories-item">
-          <div class="image-container">
-           <img class="categories-images" src="images/categories/action-camera.svg" alt="Изображение для категории Экшн-камеры" width="71" height="87">
-          </div>
-           <a class="categories-link" href="catalog.html/categories/e-cameras">"Экшн-камеры"</a>
+           <a class="categories-link" href="catalog.html/categories/e-cameras">
+            <div class="image-container">
+             <img class="categories-images" src="images/categories/action-camera.svg" alt="Изображение для категории Экшн-камеры" width="71" height="87">
+            </div>
+            <p>Экшн-камеры</p>
+          </a>
          </li>
          <li class="categories-item">
-          <div class="image-container">
-           <img class="categories-images" src="images/categories/fitness-bracelets.svg" alt="Изображение для категории Фитнес-браслеты" width="107" height="65">
-          </div>
-           <a class="categories-link" href="catalog.html/categories/fitness">Фитнес-браслеты</a>
+           <a class="categories-link" href="catalog.html/categories/fitness">
+            <div class="image-container">
+             <img class="categories-images" src="images/categories/fitness-bracelets.svg" alt="Изображение для категории Фитнес-браслеты" width="107" height="65">
+           </div>
+           <p>Фитнес-браслеты</p>
+          </a>
          </li>
          <li class="categories-item">
-          <div class="image-container">
-           <img class="categories-images" src="images/categories/smart-watch.svg" alt="Изображение для категории Умные часы" width="56" height="98">
-          </div>
-           <a class="categories-link" href="catalog.html/categories/smart-watch">Умные часы</a>
+           <a class="categories-link" href="catalog.html/categories/smart-watch">
+            <div class="image-container">
+             <img class="categories-images" src="images/categories/smart-watch.svg" alt="Изображение для категории Умные часы" width="56" height="98">
+            </div>
+            <p>Умные часы</p>
+           </a>
          </li>
          <li class="categories-item">
-          <div class="image-container">
-           <img class="categories-images" src="images/categories/quadrocopters.svg" alt="Изображение для категории Квадрокоптеры" width="132" height="69">
-          </div>
-           <a class="categories-link" href="catalog.html/categories/quadcopters">Квадрокоптеры</a>
+           <a class="categories-link" href="catalog.html/categories/quadcopters">
+            <div class="image-container">
+             <img class="categories-images" src="images/categories/quadrocopters.svg" alt="Изображение для категории Квадрокоптеры" width="132" height="69">
+            </div>
+            <p>Квадрокоптеры</p>
+           </a>
          </li>
         </ul>
-      </div>
      </section>
+    </div>
 
      <!-- Список преимуществ -->
      <section class="advantages">
@@ -295,15 +304,13 @@
            длительными тест-драйвами, распаковками, а также акции,
            спецпредложения и вот это вот всё.</p>
        </div>
-       <div class="subscription-form-container">
          <form class="subscription-form">
           <input class="subscription-form-email" type="email" name="your-e-mail" placeholder="Ваш e-mail">
           <button class="subscription-button" type="submit">Подписаться</button>
           <p class="subscription-mark">Это бесплатно</p>
          </form>
-       </div>
-      </div>
-     </section>
+     </div>
+    </section>
    </main>
 
    <!-- Подвал -->
@@ -339,17 +346,17 @@
          <div class="footer-social-container">
           <ul class="footer-social-list">
             <li class="footer-social-item">
-             <a class="footer-social-button" href="#">
+             <a class="footer-social-button" href="https://facebook.com/htmlacademy">
                <span class="visually-hidden">Фейсбук</span>
              </a>
             </li>
             <li class="footer-social-item">
-             <a class="footer-social-button" href="#">
+             <a class="footer-social-button" href="https://instagram.com/htmlacademy">
                <span class="visually-hidden">Инстаграм</span>
              </a>
             </li>
             <li class="footer-social-item">
-             <a class="footer-social-button" href="#">
+             <a class="footer-social-button" href="https://twitter.com/htmlacademy_ru">
                <span class="visually-hidden">Твиттер</span>
              </a>
             </li>
