--- a/catalog.html
+++ b/catalog.html
@@ -67,6 +67,7 @@
       </section>
 
       <section class="catalog-products">
+       <div class="container">
         <h2 class="visually-hidden">Список товаров с фильтрами</h2>
          <div class="name-filter-container">
            <h3 class="catalog-products-subtitle">Фильтр:</h3>
@@ -229,6 +230,7 @@
                 </li>
             </ul>
          </div>
+        </div>
       </section>
     </main>
 
