--- a/index.html
+++ b/index.html
@@ -19,21 +19,41 @@
              <nav class="navigation">
                <ul class="user-navigation-list">
                 <li class="user-navigation-item-search">
-                 <a class="user-navigation-link" href="#">Поиск по сайту</a>
+                 <form class="user-navigation-form-search" method="get" action="https://echo.htmlacademy.ru">
+                   <input id="search" class="user-navigation-search-input" type="search" name="search" placeholder="Поиск по сайту">
+                   <button class="user-navigation-search-button" type="submit">Найти</button>
+                  <label class="user-navigation-search-label" for="search">
+                   <span class="visually-hidden">Поиск</span>
+                  </label>
+                 </form>
                 </li>
                 <li class="user-navigation-item-login">
-                 <a class="user-navigation-link" href="#">Войти</a>
+                 <a class="user-navigation-link" href="#">
+                  <svg class="navigation-image-login" aria-hidden="true" focusable="false" width="13" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 12h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0S3 1.6 3 3.5c0 1.3.7 2.4 1.7 3C2.1 7.2.2 9.4 0 12Z" fill="#000"/>
+                  </svg>
+                  Войти
+                 </a>
                 </li>
                 <li class="user-navigation-item-compare">
-                 <a class="user-navigation-link" href="#">Сравнить</a>
+                 <a class="user-navigation-link" href="#">
+                  <svg class="navigation-image" aria-hidden="true" focusable="false" width="10" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" fill="#000"/>
+                  </svg>
+                   Сравнить</a>
                 </li>
                 <li class="user-navigation-item-basket">
-                 <a class="user-navigation-link" href="#">Корзина</a>
+                 <a class="user-navigation-link" href="#">
+                  <svg class="navigation-image" aria-hidden="true" focusable="false" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z" fill="#000"/>
+                  </svg>
+                   Корзина</a>
+                </li>
                </ul>
 
                <ul class="navigation-list">
                 <li class="navigation-item-catalog">
-                  <a class="navigation-link" href="catalog.html">Каталог Товаров</a>
+                  <a class="navigation-catalog-link navigation-link" href="catalog.html">Каталог Товаров</a>
                 </li>
                 <li class="navigation-item-delivery">
                   <a class="navigation-link" href="delivery.html">Доставка</a>
@@ -56,9 +76,9 @@
        <h2 class="visually-hidden">Слайдер с товарами</h2>
        <!--Настроить переключение слайдера-->
        <!-- Первый Слайд -->
-       <div class="slider-container">
+       <div class="slider-container slider-first">
         <img class="slider-image" src="images/slider/slider-1.png" alt="Изображение квадрокоптера" width="560" height="560">
-         <div class="slider-container-text">
+         <div class="slider-container-text slider-1">
           <strong class="slider-slogan">Порхает как бабочка, жалит как пчела!</strong>
            <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a class="slider-link" href="catalog.html/categories/quadcopters">Подробнее</a>
@@ -73,12 +93,30 @@
            </tr>
           </table>
         </div>
-       </div>
+        <!-- Пагинация слайдера -->
+        <ol class="slider-pagination">
+         <li class="slider-pagination-item">
+           <button class="slider-pagination-button slider-pagination-button-current" type="button">
+             <span class="visually-hidden">1 слайд</span>
+           </button>
+         </li>
+         <li class="slider-pagination-item">
+           <button class="slider-pagination-button" type="button">
+             <span class="visually-hidden">2 слайд</span>
+           </button>
+         </li>
+         <li class="slider-pagination-item">
+           <button class="slider-pagination-button" type="button">
+             <span class="visually-hidden">3 слайд</span>
+           </button>
+         </li>
+        </ol>
+      </div>
 
         <!-- Второй Слайд -->
        <div class="slider-container">
          <img class="slider-image" src="images/slider/slider-2.png" alt="Изображение фитнес-браслета" width="560" height="560">
-         <div class="slider-container-text">
+          <div class="slider-container-text slider-2">
            <strong class="slider-slogan">Худеем правильно!</strong>
            <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a class="slider-link" href="catalog.html/categories/fitness">Подробнее</a>
@@ -94,9 +132,9 @@
        </div>
 
         <!-- Третий Слайд   -->
-       <div class="slider-container"> 
+       <div class="slider-container slider-last"> 
         <img class="slider-image" src="images/slider/slider-3.png" alt="Изображение селфи-палки" width="560" height="560">
-         <div class="slider-container-text"> 
+         <div class="slider-container-text slider-3"> 
           <strong class="slider-slogan">Делай селфи, как Бен Стиллер!</strong>
            <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a class="slider-link" href="catalog.html/categories/monopods">Подробнее</a>
@@ -176,10 +214,15 @@
      <section class="advantages">
        <!--Слева меню должно переключаться-->
          <h2 class="visually-hidden">Наши преимущества</h2>
-        
+         
          <div class="advantages-container">
            <div class="container">
-            <div class="advanvantages-content-container">
+             <div class="advanvantages-content-container first-content-container">
+              <div class="advantages-buttons-container">
+                <a class="advantages-buttons">Доставка</a>
+                <a class="advantages-buttons">Гарантия</a>
+                <a class="advantages-buttons">Кредит</a>
+              </div>
              <ul class="advantages-list">
               <li class="advantages-item">
                <h3 class="advantages-title">Доставка</h3>
@@ -233,8 +276,10 @@
      <!-- Кнопка доставки -->
      <section class="delivery-button">
      <div class="container">
-      <h2 class="visually-hidden">Полезная информация</h2>
-        <a class="delivery-link" href="delivery.html">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</a>
+      <div class="delivery-button-container">
+       <h2 class="visually-hidden">Полезная информация</h2>
+        <a class="delivery-link" href="delivery.html">Доставим редкий товар под заказ</a>
+      </div>
      </div>
      </section>
 
@@ -298,11 +343,13 @@
            длительными тест-драйвами, распаковками, а также акции,
            спецпредложения и вот это вот всё.</p>
        </div>
+       <div class="subscription-form-container">
          <form class="subscription-form">
           <input class="subscription-form-email" type="email" name="your-e-mail" placeholder="Ваш e-mail">
           <button class="subscription-button" type="submit">Подписаться</button>
           <p class="subscription-mark">Это бесплатно</p>
          </form>
+       </div>
      </div>
     </section>
    </main>
@@ -340,17 +387,17 @@
          <div class="footer-social-container">
           <ul class="footer-social-list">
             <li class="footer-social-item">
-             <a class="footer-social-button" href="https://facebook.com/htmlacademy">
+             <a class="footer-social-button link-1" href="https://facebook.com/htmlacademy">
                <span class="visually-hidden">Фейсбук</span>
              </a>
             </li>
             <li class="footer-social-item">
-             <a class="footer-social-button" href="https://instagram.com/htmlacademy">
+             <a class="footer-social-button link-2" href="https://instagram.com/htmlacademy">
                <span class="visually-hidden">Инстаграм</span>
              </a>
             </li>
             <li class="footer-social-item">
-             <a class="footer-social-button" href="https://twitter.com/htmlacademy_ru">
+             <a class="footer-social-button link-3" href="https://twitter.com/htmlacademy_ru">
                <span class="visually-hidden">Твиттер</span>
              </a>
             </li>
